--- a/scripts/new_hmsc_analysis.Rmd
+++ b/scripts/new_hmsc_analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "BC Seagrass Metacommunity Analysis"
+title: "BC Seagrass Metacommunity Analysis- new Hmsc-R package"
 author: "Keila Stark"
 date: "20/06/2019"
 output: html_document
@@ -12,17 +12,71 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Install and Library Packages
 
 ```{r packages, echo = FALSE, warning=FALSE, message=FALSE}
+
+install.packages('devtools')
+install.packages('Rcpp')
+install.packages('RcppArmadillo')
+install.packages('coda')
+install.packages('beanplot')
+install.packages('circlize')
+install.packages('corrplot')
+install.packages('coda')
+install.packages('dendextend')
+
 library(devtools)
+library(HMSC)
+library(vegan)
+library(tidyverse)
+library(viridis)
+library(corrplot)
+library(RColorBrewer)
+library(dendextend)
+
 install_github("hmsc-r/HMSC", build_opts = c("--no-resave-data", "--no-manual"))
 library(Hmsc)
+
 ```
 
-## Including Plots
+## Read data
 
-You can also embed plots, for example:
+```{r read data, echo=FALSE, warning=FALSE, message=FALSE}
+setwd("~/Github/HMS-Seagrass/Data")
+Y <- read.csv("Y_matrix.csv", header = TRUE, stringsAsFactors = FALSE)
+rownames(Y) <- Y[,1]
+X <- read.csv("X_matrix.csv", header = TRUE, stringsAsFactors = FALSE) # Environmental covariate matrix (X)
+X <- X[,-c(7,8,10)]
+rownames(X) <- Y[,1]
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+spatial <- read.csv("coords.csv", header = TRUE, stringsAsFactors = FALSE) # lat&long coordinates
+rownames(spatial) <- Y[,1]
+spatial <- spatial[,-1]
+
+studyDesign <- read.csv("pi.csv", header = TRUE, stringsAsFactors = FALSE) #factors
+
+Y <- Y[,-1] #remove actual site names from Y matrix now that rownames for all datasets have been established
+
+## Remove NA's / get into right format
+X[is.na(X)] <- 0
+Y[is.na(Y)] <- 0
+Y <- as.matrix(Y)
+X <- as.data.frame(X)
+spatial <- as.data.frame(spatial)
+
+spat <- data.frame(spat = sprintf('spatial_%.2d',1:78)) #spatial factor column for studyDesign
+studyDesign <- cbind(studyDesign, spat)
+
+rL1 = HmscRandomLevel(units = studyDesign$Quadrat)
+rL2 = HmscRandomLevel(units = studyDesign$Site)
+rL3 = HmscRandomLevel(units = studyDesign$Region)
+rL4= HmscRandomLevel(sData = spatial)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+# Construct and fit HMSC model
+
+```{r construct model}
+hM <- Hmsc(Y = Y, XData = X, XFormula = ~eelgrass_lai + ph + sstmean + nitrate + chlomean + salinity, studyDesign = studyDesign, ranLevels = list(Quadrat = rL1, Site = rL2, Region = rL3, spat = rL4)) # I have selected only these variables because some covary (ggpairs analysis)
+
+mod <- sampleMcmc(hM, samples = 100 , transient = 1000, thin = 100)
+
+```
+
